# airborne-crew

./: .gitattributes  .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake
cmake_build/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  main
devlog/: README.md
devmap/: README.md
lib/: README.md
libs/: README.md
libs/LIBSFML/lib/: libsfml-network.2.6.1.dylib  libsfml-system.2.6.1.dylib  libsfml-window.2.6.1.dylib
libs/LIBSFML/osx/lib/: libsfml-audio.2.6.1.dylib  libsfml-graphics.2.6.1.dylib
libs/LIBSFML/osx/lib/cmake/SFML/: SFMLSharedTargets-release.cmake  SFMLSharedTargets.cmake
libs/LIBSFML/osx/lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
libs/LIBSFML/win64/lib/cmake/SFML/: SFMLStaticTargets.cmake
libs/LIBTGUI/lib/: libtgui.1.1.0.dylib  libtgui.dylib
libs/LIBTGUI/linux/include/TGUI/: Config.hpp
libs/LIBTGUI/osx/include/TGUI/: Config.hpp
libs/LIBTGUI/osx/lib/cmake/TGUI/: TGUIConfig.cmake  TGUISharedTargets-release.cmake  TGUISharedTargets.cmake
libs/LIBTGUI/win64/include/TGUI/: Config.hpp
libs/LIBTGUI/win64/include/TGUI/Backend/Renderer/: BackendText.hpp
libs/LIBTGUI/win64/lib/cmake/TGUI/: TGUIConfig.cmake  TGUISharedTargets-debug.cmake  TGUISharedTargets-release.cmake  TGUISharedTargets.cmake  TGUIStaticTargets-debug.cmake  TGUIStaticTargets-release.cmake  TGUIStaticTargets.cmake
libs/LIBtinyfiledialogs/lib/: libTinyFileDialogsDll.dylib
meta/: README.md
src/: CMakeLists.txt  README.md  README_DOCUMENT.md  domain_functions.cpp  domain_functions.h  event_handler.cpp  event_handler.h  global_parameters.h  gui_builder.cpp  gui_builder.h  main.cpp
src/gui/: README.md  canvas.cpp  canvas.h  coords.cpp  coords.h  fps.cpp  fps.h  label_base.h  menu.cpp  menu.h  separator.cpp  separator.h  slider.cpp  slider.h  stamp.cpp  stamp.h  text_label.cpp  text_label.h
src/objects/: README.md  plane.cpp  plane.h
utils/: README.md  aviation_handler.h  aviation_settings.txt  log_handler.cpp  log_handler.h  settings.txt  weather_handler.h  weather_settings.txt
utils/dialogs/: tinyfiledialogs.cpp
